Added calendar event list API support
